[package]
name = "ciseaux_client"
description = "Just a Redis Pool implementation"
version = "0.3.2-alpha.0"
authors = ["TheoHay <priv.theohay@gmail.com>"]
keywords = ["redis", "async", "database", "pool"]
homepage = "https://github.com/TheoHay/ciseaux_client"
repository = "https://github.com/TheoHay/ciseaux_client"
documentation = "https://docs.rs/ciseaux_client"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features=["sync", "time"] }
redis = "0.16"
async-trait = "0.1"
futures = "0.3"
num_cpus = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }